Add; Added announcement-bar

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -13,8 +13,9 @@
   </head>
 
   <body>
-
+    {% section 'announcement-bar' %}
+    <main>
     {{ content_for_layout }}
-
+    </main>
   </body>
 </html>
