--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -2,7 +2,7 @@
 <style>
     .announcement-bar-wrapper
     {
-        .background-color: {{ section.settings.background_color }};
+        background-color: {{ section.settings.background_color }};
         padding: 12px 0;
     }
     .announcement-bar__text
