--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -3,6 +3,11 @@
     .announcement-bar-wrapper
     {
         background-color: {{ section.settings.background_color }};
+        padding: 12px 0;
+        position: sticky;
+        top: 0;
+        width: 100%;
+        z-index: 10;
     }
     .announcement-bar__text
     {
@@ -11,6 +16,7 @@
         margin: 0;
         font-size: 14px;
         font-weight: 500;
+        font-family: 'DM Sans', sans-serif;
     }
 </style>
 
