--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link href="stylesheet" href="{{ base.css | asset_url }}">
+    <link rel="stylesheet" href="{{ 'base.css' | asset_url }}">
     
     {{ content_for_header }}
   </head>
