Fix: fixing some details

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -58,6 +58,7 @@
     .header__search-button:hover
     {
         background-color: #00AC4F;
+        transform: ease 0.3ms;
     }
     .header__cart-link
     {
