--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,6 +20,7 @@
 
   <body>
     {% section 'announcement-bar' %}
+    {% section 'header' %}
     <main>
     {{ content_for_layout }}
     </main>
