--- a/assets/base.css
+++ b/assets/base.css
@@ -2,3 +2,7 @@ body
 {
     margin: 0;
 }
+body, button, input, select, textarea,
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'DM Sans', sans-serif !important;
+}
