--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -2,7 +2,7 @@
  <style>
     .header-wrapper
     {
-        padding: 20px 40px;
+        padding: 20px 70px;
         background-color: {{ section.settings.background_color }};
     }
     .header-main
@@ -54,11 +54,13 @@
         gap: 8px;
         font-size: 16px;
         border-left: 1.5px solid #252525;
+        transition: background-color 0.3ms ease, color 0.3ms ease;
     }
     .header__search-button:hover
     {
         background-color: #00AC4F;
-        transform: ease 0.3ms;
+        color: #ffffff;
+        cursor: pointer;
     }
     .header__cart-link
     {
@@ -93,7 +95,7 @@
     {
         font-size: 12px;
         font-weight: 500;
-        margin-top: 4px;
+        margin-top: 2px;
         letter-spacing: 0.5px;
     }
     .header-nav
