--- a/assets/base.css
+++ b/assets/base.css
@@ -6,3 +6,11 @@ body, button, input, select, textarea,
 h1, h2, h3, h4, h5, h6 {
   font-family: 'DM Sans', sans-serif !important;
 }
+.header__search-button
+{
+    transition: all 0.3s ease !important;
+}
+.header__search-button:hover
+{
+    background-color: #28a745 !important;
+}
