--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -2,7 +2,7 @@
  <style>
     .header-wrapper
     {
-        padding: 30px 70px;
+        padding: 30px 80px;
         background-color: {{ section.settings.background_color }};
     }
     .header-main
@@ -24,7 +24,7 @@
     .header__search
     {
         flex-grow: 0.5;
-        max-width: 530px;
+        max-width: 528px;
     }
     .header__search-form
     {
@@ -33,7 +33,6 @@
         border-radius: 999px;
         overflow: hidden;
         transform: translateX(-40px);
-        border: 1.5px solid #252525;
     }
     .header__search-input
     {
@@ -47,6 +46,7 @@
     }
     .header__search-button
     {
+        position: relative;
         border: none;
         background-color: #FFFFFF;
         padding: 8px 20px;
@@ -54,10 +54,10 @@
         display: flex;
         align-items: center;
         gap: 8px;
-        font-size: 16px;
-        border-left: none;
+        font-size: 20px;
         border-top-left-radius: 25px;
         border-bottom-left-radius: 25px;
+        border-left: 1.5px solid #252525 !important;
         transition: background-color 0.3ms ease, color 0.3ms
     }
     .header__search-button:hover
@@ -119,6 +119,7 @@
         text-decoration: none;
         color: #252525;
         font-size: 16px;
+        font-weight: bold;
     }
     .header-nav__link:hover
     {
