--- a/assets/base.css
+++ b/assets/base.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header__search-button
 {
-    transition: all 0.3s ease !important;
+    transition: all 0.3s ease-in-out !important;
 }
 .header__search-button:hover
 {
