--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -2,7 +2,7 @@
  <style>
     .header-wrapper
     {
-        padding: 30px 80px;
+        padding: 30px 120px;
         background-color: {{ section.settings.background_color }};
     }
     .header-main
@@ -62,6 +62,7 @@
     }
     .header__search-button:hover
     {
+        transform: scale(1.05); 
         background-color: #00AC4F;
     }
     .header__cart-link
