--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -10,6 +10,20 @@
         justify-content: center;
         min-height: 500px;
     }
+     .banner-wrapper::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        z-index: 1; /* Coloca a imagem acima da cor de fundo */
+        background-image: url('{{ section.settings.background_image | image_url }}');
+        opacity: {{ section.settings.background_image_opacity }};
+    }
     .banner-content-wrapper
     {
         display: flex;
@@ -180,6 +194,20 @@
       "label": "Imagem Principal"
     },
     {
+      "type": "image_picker",
+      "id": "background_image",
+      "label": "Imagem de Fundo (Sobreposição)"
+    },
+    {
+      "type": "range",
+      "id": "background_image_opacity",
+      "min": 0,
+      "max": 1,
+      "step": 0.1,
+      "label": "Opacidade da Imagem de Fundo",
+      "default": 0.5
+    },
+    {
       "type": "header",
       "content": "Configurações de Cor"
     },
@@ -187,7 +215,7 @@
       "type": "color",
       "id": "background_color",
       "label": "Cor de Fundo",
-      "default": "#111111"
+      "default": "#17171A"
     },
     {
       "type": "color",
