--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -9,31 +9,17 @@
         align-items: center;
         justify-content: center;
         min-height: 500px;
-        background-color: {{ section.settings.background_color }}
+        background-color: {{ section.settings.background_color }};
         {%- if section.settings.background_image != blank -%}
             background-image: url('{{ section.settings.background_image | image_url: width: 1440 }}');
         {%- else -%}
-            background-image: url("{{ 'BG.png' | asset_url }}");
+            background-image: url("{{ 'converted-image.jpg' | asset_url }}");
         {%- endif -%}
 
         /* Melhora a exibição da imagem de fundo */
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-    }
-     .banner-wrapper::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        z-index: 1;
-        background-image: url('{{ section.settings.background_image | image_url }}');
-        opacity: {{ section.settings.background_image_opacity }};
     }
     .banner-content-wrapper
     {
@@ -45,6 +31,7 @@
         gap: 15px;
         margin-left: 50px;
         margin-bottom: 20px;
+        z-index: 1;
     }
     .banner-text-wrapper
     {
@@ -52,7 +39,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        z-index: 3;
+        z-index: 1;
     }
     .reviews-text
     {
@@ -62,14 +49,14 @@
         color: #ffffff;
         margin: 0 0 5px 0;
         align-items: left;
-        z-index: 3;
+        z-index: 1;
     }
     .banner-stars
     {
         color: #FFB800CC;
         margin-left: 8px;
         font-size: 12px;
-        z-index: 3;
+        z-index: 1;
     }
     .main-heading
     {
@@ -77,7 +64,7 @@
         font-weight: bold;
         line-height: 0.95;
         margin: 0 0 10px 0;
-        z-index: 3;
+        z-index: 1;
     }
     .subheading
     {
@@ -85,7 +72,7 @@
         line-height: 1.5;
         margin: 0 0 30px 0;
         opacity: 0.9;
-        z-index: 3;
+        z-index: 1;
     }
     .banner-button
     {
@@ -96,7 +83,7 @@
         font-size: 20px;
         transform: translateY(20px);
         transition: transform 0.3s ease;
-        z-index: 3;
+        z-index: 1;
     }
     .banner-button:hover
     {
